--- a/directories/sponsors/sponsors.html
+++ b/directories/sponsors/sponsors.html
@@ -5,10 +5,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-municipality-of-naples.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Municipality of Naples</h6>
@@ -30,10 +30,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-meditech.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Meditech</h6>
@@ -55,10 +55,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-infiniti-mondi.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Infiniti Mondi</h6>
@@ -80,10 +80,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-latitudo40.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Latitudo 40</h6>
@@ -105,10 +105,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-opendatasoft.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Opendatasoft</h6>
@@ -130,10 +130,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-the-lisbon-council.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>The Lisbon Council</h6>
@@ -155,10 +155,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-beopen.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>BeOpen</h6>
@@ -180,10 +180,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-dome.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>DOME Project</h6>
@@ -205,10 +205,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-DSBA.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>DSBA</h6>
@@ -227,10 +227,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-enershare.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Enershare</h6>
@@ -252,10 +252,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-esa-space-solutions.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>European Space Agency</h6>
@@ -277,10 +277,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-unibit.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>ULSIT</h6>
@@ -302,10 +302,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-rai-campania.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Rai Campania</h6>
@@ -327,10 +327,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-cities-today.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Cities Today</h6>
@@ -352,10 +352,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-clubglobals.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Club Globals</h6>
@@ -377,10 +377,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTGN.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Iot Global Network</h6>
@@ -402,10 +402,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-IoTNow.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Iot Now</h6>
@@ -427,10 +427,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-renewable-matter.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Renewable Matter</h6>
@@ -449,10 +449,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-cities-world.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>SmartCitiesWorld</h6>
@@ -474,10 +474,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/partners/logo-smart-city-journal.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>The Smart City Journal</h6>
@@ -499,10 +499,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-pleiades.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>Pleiades</h6>
@@ -524,10 +524,10 @@
 >
     <div class='f-cat active'>
         <div class='city-photo-container'>
-            <picture>
-               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.webp" type="image/webp"/>
+            <!--picture>
+               <source srcset="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.webp" type="image/webp"/-->
                <img alt="" class="city-photo" src="https://www.fiware.org/fiware-summit/naples-2024/images/sponsors/logo-teamdev.png" loading="lazy" />
-            </picture>
+            <!--/picture-->
         </div>
         <div class='profile-details'>
             <h6 class='name'>TeamDev</h6>
