key expo event upload

--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -75,6 +75,7 @@
                 <option value='digital-product-passport'>Digital Product Passport</option>
                 <option value='global-summit'>Global Summit</option>
                 <option value='smart-cities'>Smart Cities</option>
+                <option value='smart-energy'>Smart Energy</option>
                 <option value='smart-water'>Smart Water</option>
                 <option value='technology'>Technology</option>
                 <option value='university'>University</option>
