impact story libelium mar menor upload

--- a/directories/impact-stories/filters.html
+++ b/directories/impact-stories/filters.html
@@ -53,6 +53,7 @@
                     <option value='egovernance'>eGovernance</option>
                     <option value='ehealth'>eHealth</option>
                     <option value='energy'>Energy</option>
+                    <option value='environment'>Environment</option>
                     <option value='industry'>Industry</option>
                     <option value='islands'>Islands</option>
                     <option value='logistics'>Logistics</option>
@@ -88,6 +89,7 @@
                     <option value='2022'>2022</option>
                     <option value='2023'>2023</option>
                     <option value='2024'>2024</option>
+                    <option value='2025'>2025</option>
         </select>
     </div>
 
