--- a/directories/events-directory/filters.html
+++ b/directories/events-directory/filters.html
@@ -63,6 +63,7 @@
                 <option value='summit'>Summit</option>
                 <option value='training'>Training</option>
                 <option value='webinar'>Webinar</option>
+                <option value='workshop'>Workshop</option>
         </select>
     </div>
     <div class='filter-element'>
@@ -76,6 +77,7 @@
                 <option value='global-summit'>Global Summit</option>
                 <option value='smart-cities'>Smart Cities</option>
                 <option value='smart-energy'>Smart Energy</option>
+                <option value='smart-industry'>Smart Industry</option>
                 <option value='smart-water'>Smart Water</option>
                 <option value='technology'>Technology</option>
                 <option value='university'>University</option>
