--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -43,12 +43,12 @@
   <div class="filter-element">
     <select name="" id="filterTrack">
       <option value="*">Tracks</option>
-          <option value='co-creation-of-tech-solutions'>Co-creation of tech solutions</option>
-          <option value='collaborative-business-strategies'>Collaborative business strategies</option>
+          <option value='ai---data-driven-urban-management'>AI &amp; Data-Driven Urban Management</option>
           <option value='grand-opening'>Grand Opening</option>
-          <option value='hands-on-use-cases'>Hands-On Use Cases</option>
-          <option value='innovation-with-fiware'>Innovation with FIWARE</option>
           <option value='organization'>Organization</option>
+          <option value='secure-smart-city'>Secure Smart City</option>
+          <option value='smart-governance-for-smart-cities'>Smart Governance for Smart Cities</option>
+          <option value='sustainable-smart-city'>Sustainable Smart City</option>
           <option value='tech---trends'>Tech &amp; Trends</option>
           <option value='tech-training'>Tech Training</option>
     </select>
