agenda content updates

--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -43,11 +43,11 @@
   <div class="filter-element">
     <select name="" id="filterTrack">
       <option value="*">Tracks</option>
-          <option value='ai---data-driven-urban-management'>AI &amp; Data-Driven Urban Management</option>
+          <option value='ai---data-driven-urban-mngmt'>AI &amp; Data-Driven Urban Mngmt</option>
           <option value='grand-opening'>Grand Opening</option>
           <option value='organization'>Organization</option>
           <option value='secure-smart-city'>Secure Smart City</option>
-          <option value='smart-governance-for-smart-cities'>Smart Governance for Smart Cities</option>
+          <option value='smart-gov-for-smart-cities'>Smart Gov for Smart Cities</option>
           <option value='sustainable-smart-city'>Sustainable Smart City</option>
           <option value='tech---trends'>Tech &amp; Trends</option>
           <option value='tech-training'>Tech Training</option>
