--- a/directories/agenda/agenda.html
+++ b/directories/agenda/agenda.html
@@ -1083,7 +1083,7 @@
 
 
 <div class='grid-item sustainable-smart-city diversity-and-ecosystem-collaboration ulrich-ahle dario-avallone andrea-battaglia lars-nagel ana-garcia-robles lanfranco-marasso 22-may'>
-    <div class="gridElementTextContainer">
+    <div class="gridElementTextContainer moderated">
       <a href="./program-details-summary?id=the-future-of-data-economy">
         <div class="chip-track">
           <div class="track light-blue">Sustainable Smart City</div>
@@ -1103,7 +1103,10 @@
       </a>
     </div>
 
-    <div class="speakers-container">
+    <div class="speakers-container moderated">
+      <div class="moderated-by">
+        Session moderated by
+      </div>
       <div class="speakers">
         <div class="speaker"  data-modal='ulrich-ahle'>
           <div class="profile-picture">
