--- a/directories/agenda/agenda.html
+++ b/directories/agenda/agenda.html
@@ -1105,7 +1105,7 @@
 
     <div class="speakers-container moderated">
       <div class="moderated-by">
-        Session moderated by
+        Panel moderated by
       </div>
       <div class="speakers">
         <div class="speaker"  data-modal='ulrich-ahle'>
