--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ ul {
             <li><a href="./directories/people/bod">Board of Directors</a></li>
             <!--li><a href="./directories/people/boo">Board of Officers</a></li-->
             <li><a href="./directories/people/evangelists">Evangelists</a></li>
-            <!--ßli><a href="./directories/people/experts">FIWARE Experts</a></li-->
+            <!--li><a href="./directories/people/experts">FIWARE Experts</a></li-->
             <li><a href="./directories/people/fisab">Scientific Advisory Board</a></li>
-            <li><a href="./directories/people/msc">Mission Support Committess</a></li>
+            <li><a href="./directories/people/msc">Mission Support Committees</a></li>
             <li><a href="./directories/people/tsc">Technical Steering Committee </a></li>
             <li><a href="./directories/people/team">FIWARE Team</a></li>
           </ul>
