Add colour class

--- a/directories/agenda/agenda.html
+++ b/directories/agenda/agenda.html
@@ -366,7 +366,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -890,7 +890,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -1104,7 +1104,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Panel moderated by
       </div>
       <div class="speakers">
@@ -1475,7 +1475,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -1573,7 +1573,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -2119,7 +2119,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-grey">
         Session moderated by
       </div>
       <div class="speakers">
@@ -2215,7 +2215,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -2300,7 +2300,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -2385,7 +2385,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-green">
         Session moderated by
       </div>
       <div class="speakers">
@@ -2694,7 +2694,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -3122,7 +3122,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -3441,7 +3441,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -3526,7 +3526,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-green">
         Session moderated by
       </div>
       <div class="speakers">
@@ -3664,7 +3664,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -4321,7 +4321,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -4565,7 +4565,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-blue">
         Session moderated by
       </div>
       <div class="speakers">
@@ -4650,7 +4650,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -4735,7 +4735,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-green">
         Session moderated by
       </div>
       <div class="speakers">
@@ -5286,7 +5286,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-green">
         Session moderated by
       </div>
       <div class="speakers">
@@ -5470,7 +5470,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-purple">
         Session moderated by
       </div>
       <div class="speakers">
@@ -5872,7 +5872,7 @@
     </div>
 
     <div class="speakers-container moderated">
-      <div class="moderated-by">
+      <div class="moderated-by light-green">
         Session moderated by
       </div>
       <div class="speakers">
