agenda content updates

--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -47,7 +47,7 @@
           <option value='grand-opening'>Grand Opening</option>
           <option value='organization'>Organization</option>
           <option value='secure-smart-city'>Secure Smart City</option>
-          <option value='smart-gov-for-smart-cities'>Smart Gov for Smart Cities</option>
+          <option value='smart-governance---digital-pa'>Smart Governance &amp; Digital PA</option>
           <option value='sustainable-smart-city'>Sustainable Smart City</option>
           <option value='tech---trends'>Tech &amp; Trends</option>
           <option value='tech-training'>Tech Training</option>
