--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@ ul {
           </ul>
           <h2>FIWARE Global Summit</h3>
           <ul>
-            <li><a href="./directories/people/speakers/">Summit Speakers</a></li>
-            <li><a href="./directories/agenda/">Summit Agenda</a></li>
-            <li><a href="./directories/agenda/calendar.html">Summit Calendar</a></li>
-            <li><a href="./directories/sponsors/">Summit Sponsors</a></li>
+            <li><a href="./directories/people/speakers/">FGS Speakers</a></li>
+            <li><a href="./directories/agenda/">FGS Agenda</a></li>
+            <li><a href="./directories/agenda/calendar.html">FGS Calendar</a></li>
+            <li><a href="./directories/sponsors/">FGS Sponsors</a></li>
+            <li><a href="./directories/locations/index.html">FGS Locations Map</a></li>
           </ul>
         </div>
         <div>
