--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -57,19 +57,17 @@
     <select name="" id="filterSession">
       <option value="*">Sessions</option>
           <option value='ai---ml'>AI &amp; ML</option>
-          <option value='boosting-the-co-creation-in-across-the-domains'>Boosting the co-creation in across the domains</option>
-          <option value='building-more-secure-and-resilient-solutions'>Building more secure and resilient solutions</option>
+          <option value='best-fiware-use-cases-around-the-world'>Best FIWARE Use Cases Around the World</option>
           <option value='data-spaces-technology'>Data Spaces Technology</option>
           <option value='deployments'>Deployments</option>
           <option value='digital-twins'>Digital Twins</option>
-          <option value='diversity-and-ecosystem-collaboration'>Diversity and Ecosystem collaboration</option>
           <option value='fiware-catalog-components'>FIWARE Catalog Components</option>
           <option value='fiware-scientific-advisory-board'>FIWARE Scientific Advisory Board</option>
           <option value='innovation-projects-on-data-sharing-in-cities'>Innovation projects on data sharing in cities</option>
           <option value='innovation-projects-on-industrial-data-and-robots'>Innovation projects on industrial data and robots</option>
           <option value='innovation-projects-on-urban-planning-and-climate-action'>Innovation projects on urban planning and climate action</option>
-          <option value='introduction-and-strategic-vision'>Introduction and Strategic vision</option>
           <option value='ngsi-ld-basics'>NGSI-LD Basics</option>
+          <option value='official-speeches'>Official Speeches</option>
           <option value='process---inference'>Process &amp; Inference</option>
           <option value='robotics'>Robotics</option>
           <option value='security---distributed-trust'>Security &amp; Distributed Trust</option>
@@ -82,14 +80,12 @@
           <option value='startup-innovative-products-pitches'>Startup Innovative Products Pitches</option>
           <option value='startup-innovative-technology-based-products-pitches'>Startup innovative technology-based products Pitches</option>
           <option value='sustainability-and-growth-of-the-fiware-ecosystem-through-high-performing-local-innovation-hubs'>Sustainability and Growth of the FIWARE Ecosystem through High-Performing Local Innovation Hubs</option>
-          <option value='the-value-of-the-ecosystem'>The value of the Ecosystem</option>
-          <option value='working-together-for-a-healthier-planet'>Working together for a healthier planet</option>
     </select>
   </div>
   <!-- <div class="filter-element">
     <select name="" id="filterPrefix">
       <option value="*">Types</option>
-          <option value='interview'>Interview</option>
+          <option value='agreement'>Agreement</option>
           <option value='panel'>Panel</option>
           <option value='pitch'>Pitch</option>
           <option value='training'>Training</option>
@@ -100,10 +96,7 @@
     <select name="" id="filterSpeaker">
       <option value="*">Speakers</option>
           <option value='alberto-abella'>Alberto Abella</option>
-          <option value='ulrich-ahle'>Ulrich Ahle</option>
           <option value='álvaro-alonso'>Álvaro Alonso</option>
-          <option value='alexander-andrade'>Alexander Andrade</option>
-          <option value='dario-avallone'>Dario Avallone</option>
           <option value='andrea-battaglia'>Andrea Battaglia</option>
           <option value='martin-bauer'>Martin Bauer</option>
           <option value='jose-benítez'>Jose Benítez</option>
@@ -111,49 +104,37 @@
           <option value='sebastian-blechmann'>Sebastian Blechmann</option>
           <option value='ilaria-bortone'>Ilaria Bortone</option>
           <option value='david-campo'>David Campo</option>
-          <option value='antony-cassano'>Antony Cassano</option>
+          <option value='augustin-cardenes'>Augustin Cardenes</option>
           <option value='davide-cazzaniga'>Davide Cazzaniga</option>
+          <option value='chandra-challagonda'>Chandra Challagonda</option>
           <option value='denis-chikurtev'>Denis Chikurtev</option>
           <option value='javier-conde-díaz'>Javier Conde Díaz</option>
           <option value='luigi-coppolino'>Luigi Coppolino</option>
           <option value='vincenzo-croce'>Vincenzo Croce</option>
           <option value='andrea-cruciani'>Andrea Cruciani</option>
           <option value='francesca-d-agresti'>Francesca D’Agresti</option>
-          <option value='dasha-davies'>Dasha Davies</option>
+          <option value='mireya-de-diego'>Mireya de Diego</option>
           <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='francisco-de-la-vega'>Francisco de la Vega</option>
-          <option value='mireya-de-diego'>Mireya de Diego</option>
           <option value='vincent-demortier'>Vincent Demortier</option>
-          <option value='rocío-díaz-pereira'>Rocío Díaz Pereira</option>
           <option value='piotr-elmanowski'>Piotr Elmanowski</option>
           <option value='alessandro-errico'>Alessandro Errico</option>
           <option value='gregory-eve'>Gregory Eve</option>
-          <option value='rodolfo-falcone'>Rodolfo Falcone</option>
           <option value='rihab-feki'>Rihab Feki</option>
           <option value='jason-fox'>Jason Fox</option>
-          <option value='ana-garcia-robles'>Ana Garcia Robles</option>
-          <option value='frédéric-gauzy'>Frédéric Gauzy</option>
-          <option value='bruno-georges'>Bruno Georges</option>
-          <option value='angelo-giuliana'>Angelo Giuliana</option>
-          <option value='miguel-gonzalez-mendoza'>Miguel Gonzalez-Mendoza</option>
-          <option value='misato-hattori'>Misato Hattori</option>
           <option value='jorge-hernandez'>Jorge Hernandez</option>
           <option value='juanjo-hierro'>Juanjo Hierro</option>
           <option value='jung-hoon-lee'>Jung Hoon Lee</option>
           <option value='abdulrahman-ibrahim'>Abdulrahman Ibrahim</option>
           <option value='raza-jafri'>Raza Jafri</option>
           <option value='eduardo-javier-serra'>Eduardo Javier Serra</option>
-          <option value='sheridan-johns'>Sheridan Johns</option>
           <option value='steve-johnston'>Steve Johnston</option>
           <option value='dimitris-kalogeras'>Dimitris Kalogeras</option>
           <option value='evanson-karanja'>Evanson Karanja</option>
           <option value='yuki-kato'>Yuki Kato</option>
-          <option value='jin-kawasaki'>Jin Kawasaki</option>
           <option value='luka-keseri-'>Luka Keserič</option>
           <option value='ernoe-kovacs'>Ernoe Kovacs</option>
-          <option value='eugenia-kovatcheva'>Eugenia Kovatcheva</option>
           <option value='tomohiro-kuwahara'>Tomohiro Kuwahara</option>
-          <option value='mirco-lacalandra'>Mirco Lacalandra</option>
           <option value='jure-lampe'>Jure Lampe</option>
           <option value='frédéric-le'>Frédéric Le</option>
           <option value='franck-le-gall'>Franck Le Gall</option>
@@ -161,19 +142,14 @@
           <option value='antonella-longo'>Antonella Longo</option>
           <option value='frederico-lopes'>Frederico Lopes</option>
           <option value='fernando-lópez-aguilar'>Fernando López Aguilar</option>
-          <option value='pier-luigi-pisa'>Pier Luigi Pisa</option>
-          <option value='gilsoni-lunardi-albino'>Gilsoni Lunardi Albino</option>
           <option value='reo-maeda'>Reo Maeda</option>
           <option value='andrea-maioli'>Andrea Maioli</option>
-          <option value='gaetano-manfredi'>Gaetano Manfredi</option>
-          <option value='mannix-manglani'>Mannix Manglani</option>
           <option value='lanfranco-marasso'>Lanfranco Marasso</option>
           <option value='angelo-marguglio'>Angelo Marguglio</option>
           <option value='pierryl-massal'>Pierryl Massal</option>
           <option value='caroline-mbaya'>Caroline Mbaya</option>
           <option value='davor-meersman'>Davor Meersman</option>
           <option value='francisco-meléndez'>Francisco Meléndez</option>
-          <option value='feroz-merchhiya'>Feroz Merchhiya</option>
           <option value='sophie-meszaros'>Sophie Meszaros</option>
           <option value='jose-miguel-barone'>Jose Miguel Barone</option>
           <option value='nejib-moalla'>Nejib Moalla</option>
@@ -182,7 +158,6 @@
           <option value='luis-muñoz'>Luis Muñoz</option>
           <option value='josé-mun-oz-arcentales'>José Muñoz Arcentales</option>
           <option value='francesco-mureddu'>Francesco Mureddu</option>
-          <option value='lars-nagel'>Lars Nagel</option>
           <option value='gilles-orazi'>Gilles Orazi</option>
           <option value='fabiano-pallonetto'>Fabiano Pallonetto</option>
           <option value='clara-pezuela'>Clara Pezuela</option>
@@ -194,8 +169,6 @@
           <option value='irene-provvidenza'>Irene Provvidenza</option>
           <option value='hervé-pruvost'>Hervé Pruvost</option>
           <option value='josué-ramos-gómez'>Josué Ramos Gómez</option>
-          <option value='matthias-rehfeld'>Matthias Rehfeld</option>
-          <option value='luca-remotti'>Luca Remotti</option>
           <option value='matteo-repetto'>Matteo Repetto</option>
           <option value='gianluigi-riccio'>Gianluigi Riccio</option>
           <option value='joaquín-salvachúa'>Joaquín Salvachúa</option>
@@ -204,28 +177,19 @@
           <option value='tonia-sapia'>Tonia Sapia</option>
           <option value='shuhei-sasano'>Shuhei Sasano</option>
           <option value='laura-schipani'>Laura Schipani</option>
-          <option value='bernhard-schmid'>Bernhard Schmid</option>
           <option value='christoph-schneider'>Christoph Schneider</option>
-          <option value='marco-schuldt'>Marco Schuldt</option>
-          <option value='björn-schwarze'>Björn Schwarze</option>
-          <option value='mario-scuderi'>Mario Scuderi</option>
-          <option value='andrew-spannaus'>Andrew Spannaus</option>
-          <option value='daniel-spoiala'>Daniel Spoiala</option>
           <option value='harald-sundmaeker'>Harald Sundmaeker</option>
-          <option value='asimina-syriou'>Asimina Syriou</option>
           <option value='lisandra-tamayo'>Lisandra Tamayo</option>
           <option value='iffat-tariq'>Iffat Tariq</option>
           <option value='christopher-tate'>Christopher Tate</option>
+          <option value='angeles-tejado'>Angeles Tejado</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
-          <option value='thimo-thoeye'>Thimo Thoeye</option>
           <option value='moise-tuyizere'>Moise Tuyizere</option>
           <option value='giovanni-vaglica'>Giovanni Vaglica</option>
-          <option value='gerard-van-der-hoeven'>Gerard van der Hoeven</option>
           <option value='eloisa-vargiu'>Eloisa Vargiu</option>
           <option value='walter-domenico-vergara'>Walter Domenico Vergara</option>
           <option value='gaetano-volpe'>Gaetano Volpe</option>
           <option value='susan-wanjiku'>Susan Wanjiku</option>
-          <option value='christopher-wilson'>Christopher Wilson</option>
     </select>
   </div>
 </div>
