--- a/directories/agenda/program/sitemap.html
+++ b/directories/agenda/program/sitemap.html
@@ -64,46 +64,47 @@ li {
 	<ul>
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/introduction-and-strategic-vision.html">Introduction and Strategic vision</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/executive-leadership-welcome.html">Executive Leadership Welcome</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-new-fiware-vision.html">The new FIWARE Vision</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/from-vision-to-impact--a-journey-of-transformation.html">From Vision to Impact: a journey of transformation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/official-speeches.html">Official Speeches</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mrs--amal-fellah-seghrouchni--minister-of-digital-transition-and-administrative-reform.html">Mrs. Amal Fellah Seghrouchni, Minister of Digital Transition and Administrative Reform</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/dr--hicham-el-habti--president-of-um6p.html">Dr. Hicham El Habti, President of UM6P</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr-enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco.html">Mr Enrique Ojeda, Ambassador of the Kingdom of Spain to the Kingdom of Morocco</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr-carlos-pereira-marques--the-ambassador-of-portugal.html">Mr Carlos Pereira Marques, the Ambassador of Portugal</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/gral-dtion-of-territorial-collectivities--min-of-interior-morocco.html">Gral Dtion of Territorial Collectivities, Min of Interior Morocco</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--chandra-challagonda--ceo-of-the-fiware-foundation.html">Mr. Chandra Challagonda, CEO of the FIWARE Foundation</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mrs--aawatif-hayaar--president-of-the-smart-morocco-alliance.html">Mrs. Aawatif HAYAAR, President of the SMART Morocco Alliance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/working-together-for-a-healthier-planet.html">Working together for a healthier planet</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/developing-ecosystems-for-systemic-sustainability.html">Developing ecosystems for systemic sustainability</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mou-dgct-um6p--smart-morocco-alliance-agreement.html">MoU DGCT-UM6P, SMART Morocco Alliance Agreement</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.html">MoU UM6P-FIWARE, Smart Cities use cases development &amp; training</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr-mohamed-ali-habouha--governor-of-the-province-of-berkane.html">Mr Mohamed Ali Habouha, Governor of the Province of Berkane</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--yasunori-mochizuki--nec-fellow--nec-corporation--japan.html">Mr. Yasunori Mochizuki, NEC Fellow, NEC Corporation, Japan</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--abdulrahman-ibrahim--cdio--al-madinah-region-development-authority--saudi-arabia.html">Mr. Abdulrahman Ibrahim, CDIO, Al-Madinah Region Development Authority, Saudi Arabia</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--pierryl-massal--vp-head-of-business-development--atos.html">Mr. Pierryl Massal, VP Head of Business Development, Atos</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--augustin-cardenes--telefonica.html">Mr. Augustin Cardenes, Telefonica</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/mr--x--meditech.html">Mr. X, MEDITECH</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/keynote-speeches.html">Keynote Speeches</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-for-users.html">Introduction for users</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/looking-into-the-visionary-technologies-for-a-sustainable-growth.html">Looking into the visionary technologies for a sustainable growth</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/advanced--integration-and-contribution.html">Advanced: integration and contribution</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/wrap-up---key-takeaways.html">Wrap up &amp; Key takeaways</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/diversity-and-ecosystem-collaboration.html">Diversity and Ecosystem collaboration</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/working-together-for-business-growth.html">Working Together for Business Growth</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/boosting-the-co-creation-across-the-domains.html">Boosting the co-creation across the domains</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/practical-use-of-fiware-and-mims-as-a-tool-for--local--government-it-procurement.html">Practical use of FIWARE and MIMs as a tool for (local) government IT procurement</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/advanced--integration-and-contribution.html">Advanced: integration and contribution</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/crowd-management---event-security.html">Crowd Management &amp; Event Security</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/resilient-city-operations---disaster-prevention--risk-management--and-cyber-physical-security-for-urban-safety-.html">Resilient City Operations – Disaster prevention, risk management, and cyber-physical security for urban safety.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/hygiene---public-health---smart-sanitation-and-safety-standards-for-a-hygienic-environment-.html">Hygiene &amp; Public Health – Smart sanitation and safety standards for a hygienic environment.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/cybersecurity---smart-surveillance---protection-of-digital-infrastructure--data--and-networks-from-cyber-threats-.html">Cybersecurity &amp; Smart Surveillance – Protection of digital infrastructure, data, and networks from cyber threats.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/transparency---data-sharing---open-data-initiatives-to-enhance-trust-and-governance-.html">Transparency &amp; Data Sharing – Open data initiatives to enhance trust and governance.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-basic-programming-using-ngsi-ld--crud--registrations--subscriptions.html">Digital Twin basic programming using NGSI-LD: CRUD, Registrations, Subscriptions</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-port-as-a-driving-force-for-innovation-in-the-region-.html">The port as a driving force for innovation in the region​</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-spaces-made-affordable-through-dscaas.html">Data Spaces made affordable through DSCaaS</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-future-of-data-economy.html">The Future of Data Economy</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-spaces--paving-the-way-for-sustainable-and-smart-tourism.html">Data Spaces: Paving the Way for Sustainable and Smart Tourism</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/urban-surveillance---smart-policing.html">Urban Surveillance &amp; Smart Policing</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/public-space---venue-security.html">Public Space &amp; Venue Security</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/digital-twin-intermediate-programming-using-ngsi-ld--temporal-operations--geofencing.html">Digital Twin intermediate programming using NGSI-LD: Temporal Operations, Geofencing</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/leveraging-data-spaces-with-satellite-remote-sensing-and-ai-for-climate-resilience-and-sustainable-urban-development.html">Leveraging Data Spaces with Satellite Remote Sensing and AI for Climate Resilience and Sustainable Urban Development</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-portals-at-the-heart-of-smart-city-success.html">Data portals at the heart of Smart City success</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-european-cloud-and-edge-marketplace.html">The European Cloud and Edge Marketplace</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/break.html">Break</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/the-value-of-the-ecosystem.html">The value of the Ecosystem</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/driving-collaborative-excellence-beyond-borders.html">Driving Collaborative Excellence Beyond Borders</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/building-more-secure-and-resilient-solutions.html">Building more secure and resilient solutions</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/space-solutions-for-the-green-energy-transition.html">Space Solutions for the green energy transition</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/sustainability---smart-energy.html">Sustainability &amp; Smart Energy</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/smart-water-management.html">Smart Water Management</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/green-construction---digital-twins---digital-tools-to-support-sustainable-urban-development-and-co--reduction-.html">Green Construction &amp; Digital Twins – Digital tools to support sustainable urban development and CO₂ reduction.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/iot-for-smart-infrastructure---sensor-driven-intelligence-for-sustainable-mobility--energy-efficiency--and-resource-optimization-.html">IoT for Smart Infrastructure – Sensor-driven intelligence for sustainable mobility, energy efficiency, and resource optimization.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/circular-economy---waste-management---ai-powered-waste-tracking--recycling-automation--and-sustainable-consumption-.html">Circular Economy &amp; Waste Management – AI-powered waste tracking, recycling automation, and sustainable consumption.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/climate-resilience---disaster-management---ai-driven-risk-prediction--early-warning-systems--and-adaptive-urban-planning-.html">Climate Resilience &amp; Disaster Management – AI-driven risk prediction, early warning systems, and adaptive urban planning.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-persistence-of-context-data.html">Data persistence of Context Data</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/distributed-data-control--building-more-secure-and-resilient-solutions.html">Distributed Data Control: Building more secure and resilient solutions</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/q-a.html">Q&amp;A</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-iot-agent-integration.html">Introduction to IoT Agent integration</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/pioneering-the-future-of-data-exchange-economy-and-data-models.html">Pioneering the future of Data Exchange Economy and Data Models</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/data-highways--cyber-security--ai--compliance---the-risks-and-opportunities.html">Data Highways: Cyber Security, AI, Compliance –The Risks and Opportunities</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/fiware-around-the-world.html">FIWARE around the world</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/excellcity--fiware-implementation-in-a-university-environment---risks-and-quality-assurance.html">ExcellCity: FIWARE implementation in a University Environment – Risks and Quality Assurance</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/attaching-a-sensor-to-an-iot-agent.html">Attaching a sensor to an IoT Agent</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/autopoietic--cognitive-edge-cloud-service.html">Autopoietic: Cognitive Edge-cloud Service</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/identity-unlock--ai-powered-recognition-with-privacy-preserved.html">Identity Unlock: AI-Powered Recognition with Privacy Preserved</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/closing.html">Closing</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/registration.html">Registration</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/welcome-coffee.html">Welcome Coffee</a></li>
@@ -173,6 +174,7 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/introduction-to-data-spaces-connector-components.html">Introduction to Data Spaces connector components</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/ai---ml.html">AI &amp; ML</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/roadmap-and-activities-within-the-ai-ml-working-group.html">Roadmap and activities within the AI/ML Working Group</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/q-a.html">Q&amp;A</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/developing-the-territories-through-fiware-ihubs.html">Developing the territories through FIWARE iHubs</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/smart-agriculture---bio-diversity.html">Smart Agriculture &amp; Bio-Diversity</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/data-spaces-for-the-food-system---a-key-enabler-to-facilitate-sustainability-reporting-and-realising-innovative-applications.html">Data Spaces for the Food System – A Key Enabler to Facilitate Sustainability Reporting and Realising Innovative Applications</a></li>
