agenda content updates

--- a/directories/agenda/calendar.html
+++ b/directories/agenda/calendar.html
@@ -262,7 +262,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Mr. Augustin Cardenes, Telefonica&details=Grand Opening - Best FIWARE Use Cases Around the World++++Speakers:+Augustin Cardenes,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T111000/20250522T112000">Mr. Augustin Cardenes, Telefonica</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Mr. Augustin Cardenes, Telefonica&details=Grand Opening - Best FIWARE Use Cases Around the World++++Speakers:+Agustín Cardenas Fernandez,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T111000/20250522T112000">Mr. Augustin Cardenes, Telefonica</a>
              - Grand Opening - Best FIWARE Use Cases Around the World
 			<div class="date-time">
 	            <span class="separator-dot"></span>
@@ -284,7 +284,7 @@ li {
 		</li>
 		<li>
             
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Keynote Speeches&details=Grand Opening++Speakers:+Angeles Tejado,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T113000/20250522T243000">Keynote Speeches</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Keynote Speeches&details=Grand Opening++Speakers:+Ángeles Tejado,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T113000/20250522T243000">Keynote Speeches</a>
              - Grand Opening
 			<div class="date-time">
 	            <span class="separator-dot"></span>
