--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -104,7 +104,7 @@
           <option value='sebastian-blechmann'>Sebastian Blechmann</option>
           <option value='ilaria-bortone'>Ilaria Bortone</option>
           <option value='david-campo'>David Campo</option>
-          <option value='augustin-cardenes'>Augustin Cardenes</option>
+          <option value='agustín-cardenas-fernandez'>Agustín Cardenas Fernandez</option>
           <option value='davide-cazzaniga'>Davide Cazzaniga</option>
           <option value='chandra-challagonda'>Chandra Challagonda</option>
           <option value='denis-chikurtev'>Denis Chikurtev</option>
@@ -182,7 +182,6 @@
           <option value='lisandra-tamayo'>Lisandra Tamayo</option>
           <option value='iffat-tariq'>Iffat Tariq</option>
           <option value='christopher-tate'>Christopher Tate</option>
-          <option value='angeles-tejado'>Angeles Tejado</option>
           <option value='ángeles-tejado'>Ángeles Tejado</option>
           <option value='moise-tuyizere'>Moise Tuyizere</option>
           <option value='giovanni-vaglica'>Giovanni Vaglica</option>
