speakers content updates

--- a/directories/people/speakers/filters.html
+++ b/directories/people/speakers/filters.html
@@ -136,6 +136,7 @@
                         <option value='stealth-iss-group'>Stealth-ISS Group</option>
                         <option value='sysman'>Sysman</option>
                         <option value='tecnológico-de-monterrey'>Tecnológico de Monterrey</option>
+                        <option value='telefonica'>Telefonica</option>
                         <option value='telefónica'>Telefónica</option>
                         <option value='the-lisbon-council'>The Lisbon Council</option>
                         <option value='toyooka-city-hall'>Toyooka City Hall</option>
