agenda content updates

--- a/directories/agenda/calendar.html
+++ b/directories/agenda/calendar.html
@@ -460,7 +460,7 @@ li {
 		</li>
 		<li>
             <br/>
-			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Closing&details=Organization++Speakers:+Andrea Battaglia,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T180500/20250522T181500">Closing</a>
+			<a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=Closing&details=Organization++Speakers:+Chandra Challagonda,,&ctz=Africa/Casablanca&location=Auditorium&dates=20250522T180500/20250522T181500">Closing</a>
             
 			<div class="date-time">
 	            <span class="separator-dot"></span>
