agenda content updates

--- a/directories/people/speakers/filters.html
+++ b/directories/people/speakers/filters.html
@@ -144,6 +144,7 @@
                         <option value='ufrn'>UFRN</option>
                         <option value='unibit'>UNIBIT</option>
                         <option value='universidad-de-murcia'>Universidad de Murcia</option>
+                        <option value='university-of-cantabria'>University of Cantabria</option>
                         <option value='university-of-salento'>University of Salento</option>
                         <option value='université-lumière-lyon-2'>Université Lumière Lyon 2</option>
                         <option value='upm'>UPM</option>
@@ -187,6 +188,7 @@
                         <option value='general-director'>General Director</option>
                         <option value='head-of-unit'>Head of Unit</option>
                         <option value='honorary-mayor'>Honorary Mayor</option>
+                        <option value='institute-director'>Institute Director</option>
                         <option value='it-analyst'>IT Analyst</option>
                         <option value='journalist'>Journalist</option>
                         <option value='lead'>Lead</option>
