agenda content updates

--- a/directories/agenda/filters.html
+++ b/directories/agenda/filters.html
@@ -115,10 +115,12 @@
           <option value='stefano-de-panfilis'>Stefano De Panfilis</option>
           <option value='francisco-de-la-vega'>Francisco de la Vega</option>
           <option value='vincent-demortier'>Vincent Demortier</option>
+          <option value='hicham-el-habti'>Hicham El Habti</option>
           <option value='piotr-elmanowski'>Piotr Elmanowski</option>
           <option value='alessandro-errico'>Alessandro Errico</option>
           <option value='gregory-eve'>Gregory Eve</option>
           <option value='rihab-feki'>Rihab Feki</option>
+          <option value='amal-fellah-seghrouchni'>Amal Fellah Seghrouchni</option>
           <option value='jason-fox'>Jason Fox</option>
           <option value='jorge-hernandez'>Jorge Hernandez</option>
           <option value='juanjo-hierro'>Juanjo Hierro</option>
@@ -155,8 +157,10 @@
           <option value='luis-muñoz'>Luis Muñoz</option>
           <option value='josé-mun-oz-arcentales'>José Muñoz Arcentales</option>
           <option value='francesco-mureddu'>Francesco Mureddu</option>
+          <option value='enrique-ojeda'>Enrique Ojeda</option>
           <option value='gilles-orazi'>Gilles Orazi</option>
           <option value='fabiano-pallonetto'>Fabiano Pallonetto</option>
+          <option value='carlos-pereira-marques'>Carlos Pereira Marques</option>
           <option value='clara-pezuela'>Clara Pezuela</option>
           <option value='francesca-pignataro'>Francesca Pignataro</option>
           <option value='manfredi-pistone'>Manfredi Pistone</option>
