--- a/directories/agenda/program/mr-enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco.html
+++ b/directories/agenda/program/mr-enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco.html
@@ -10,7 +10,7 @@
 
 <meta name="description" content="">
 <meta name="keywords" content="FIWARE,Grand Opening">
-<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda" />
+<meta http-equiv="refresh" content="1; url=https://www.fiware.org/global-summit/agenda/program-details-summary/?id=mr-enrique-ojeda--ambassador-of-the-kingdom-of-spain-to-the-kingdom-of-morocco" />
 <!-- Open Graph Tags -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
