--- a/directories/agenda/program/sitemap.html
+++ b/directories/agenda/program/sitemap.html
@@ -77,10 +77,10 @@ li {
 		<li><a href="https://www.fiware.org/fgs-2025/mou-um6p-fiware--smart-cities-use-cases-development---training.html">MoU UM6P-FIWARE, Smart Cities use cases development &amp; training</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/best-fiware-use-cases-around-the-world.html">Best FIWARE Use Cases Around the World</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mr-mohamed-ali-habouha--governor-of-the-province-of-berkane.html">Mr Mohamed Ali Habouha, Governor of the Province of Berkane</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr--yasunori-mochizuki--nec-fellow--nec-corporation--japan.html">Mr. Yasunori Mochizuki, NEC Fellow, NEC Corporation, Japan</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr--abdulrahman-ibrahim--cdio--al-madinah-region-development-authority--saudi-arabia.html">Mr. Abdulrahman Ibrahim, CDIO, Al-Madinah Region Development Authority, Saudi Arabia</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr--pierryl-massal--vp-head-of-business-development--atos.html">Mr. Pierryl Massal, VP Head of Business Development, Atos</a></li>
-		<li><a href="https://www.fiware.org/fgs-2025/mr--augustin-cardenes--telefonica.html">Mr. Augustin Cardenes, Telefonica</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
+		<li><a href="https://www.fiware.org/fgs-2025/lorem-ipsum-dolor-sit-amet--consectetuer-adipiscing-elit-.html">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/mr--x--meditech.html">Mr. X, MEDITECH</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/keynote-speeches.html">Keynote Speeches</a></li>
 		<li><a href="https://www.fiware.org/fgs-2025/lunch.html">Lunch</a></li>
